# eddie

./: .gitignore  LICENSE  README.md  pyproject.toml
eddie/: __init__.py  app.py  app.tcss  config.py  main.py  mirascope.ini  simple_code_block.py  textual.py
eddie/.mirascope/versions/chat/: 0001_chat.py  0002_chat.py  0003_chat.py  version.txt
eddie/calls/: __init__.py  chat.py  eddie_chat.py
eddie_cli/: __init__.py  app.py  app.tcss  main.py  mirascope.ini
eddie_cli/.mirascope/versions/eddie_chat/: 0001_eddie_chat.py  0002_eddie_chat.py  0003_eddie_chat.py  0004_eddie_chat.py  0005_eddie_chat.py  0006_eddie_chat.py  version.txt
eddie_cli/calls/: __init__.py  eddie_chat.py
src/: eddie.py  main.py
src/calls/: __init__.py  eddie_chat.py
walkthroughs/: 0_initial_setup.md  1_basic_chat.md  2_chat_history.md  3_memorize_user_info.md  4_retro_textual_app.md
